# DashM8

./: .env.example  .gitignore  AGENTS.md  OverviewPage.tsx  PRD.md  README.md  kpiEngine.ts  package-lock.json  package.json  schema.prisma  seed.ts  servicem8Client.ts  syncEngine.ts  tsconfig.base.json  xeroClient.ts
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src/components/: DashboardTabs.tsx  StatCard.tsx
apps/desktop/src/lib/: loadDashboardData.ts
apps/desktop/src/pages/: OverviewPage.tsx
apps/desktop/src/pages/tabs/: CommercialTab.tsx  CustomersTab.tsx  OperationsTab.tsx  OverviewTab.tsx  TrendsTab.tsx  shared.tsx  types.ts
