[package]
name = "dashm8"
version = "0.1.0"
description = "ServiceM8 and Xero dashboard"
authors = ["OpenAI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
